<resources>
    <string name="app_name">Countdown Widget</string>
    <string name="appwidget_content_description">Title of the countdown being displayed.</string>
    <string name="appwidget_text">Default Title</string>
    <string name="appwidget_text_preview">Example Title</string>
    <string name="appwidget_countdown_text_preview">5 Days, 21 Hours, 37 Minutes</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Basic widget for displaying the countdown</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_help">Help</string>

    <string name="activity_main_header">Default Title</string>
    <string name="activity_main_edit">Edit</string>
    <string name="activity_main_delete">Delete</string>
    <string name="activity_main_confirmation_title">Confirm Delete</string>
    <string name="activity_main_confirmation_message">Are you sure you want to do this? It cannot be undone.</string>
    <string name="activity_main_confirmation_yes">OK</string>
    <string name="activity_main_confirmation_no">Cancel</string>
    <string name="activity_main_expired">Countdown Finished</string>
    <string name="activity_conf_title">Select a Countdown</string>
    <string name="activity_create_title">Create Countdown</string>
    <string name="activity_update_title">Update Countdown</string>
    <string name="fragment_create_name_hint">Countdown Name</string>
    <string name="fragment_create_name">Name</string>
    <string name="fragment_create_date">Date</string>
    <string name="fragment_create_time">Time</string>
    <string name="fragment_create_create">Create</string>
    <string name="fragment_create_update">Update</string>
</resources>