<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="?android:attr/actionBarSize"
    tools:context=".ui.create.CreateFragment">


    <EditText
        android:id="@+id/fragment_create_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/fragment_create_name"
        android:ems="10"
        android:hint="@string/activity_create_title"
        android:inputType="text"
        android:text="" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fragment_create_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_create_date" />

        <TextView
            android:id="@+id/fragment_create_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fragment_create_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_create_time" />

        <TextView
            android:id="@+id/fragment_create_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Spinner
        android:id="@+id/fragment_create_timeZone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
