<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.CountdownWidget.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.CountdownWidget.AppWidgetContainer">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/appwidget_text"
            style="@style/Widget.CountdownWidget.AppWidget.InnerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="2dp"
            android:contentDescription="@string/appwidget_content_description"
            android:fontFamily="@font/roboto"
            android:padding="2dp"
            android:text="@string/appwidget_text_preview"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/widget_countdown_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/appwidget_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1dp"
            android:background="@drawable/app_widget_inner_view_background"
            android:fontFamily="@font/roboto"
            android:padding="2dp"
            android:text="@string/appwidget_countdown_text_preview"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textColor="@color/black"
            android:textSize="22sp" />
    </RelativeLayout>

</RelativeLayout>